--- a/.gitignore
+++ b/.gitignore
@@ -24,33 +24,6 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-# specific large datafiles
-data/treesdb_v01.02.sql
-data/treesdb_v01.03.sql.gz
-data/treesdb_v01.04.sql
-data/treesdb_v01.05.sql
-data/treesdb_v01.05.sql.backup
-data/treesdb_v01.06.sql
-data/treesdb_v01.06.sql.backup
-data/treesdb_v01.07.sql
-
-data/treesdb_v02.sql.gz
-# data/treesdb_v03.01.sql.backup
-data/treesdb_v03.sql.gz
-data/treesdb_v04.sql.gz
-
-
-# other
-*.aux
-*.log
-*.out
-*.tex
-
-qr/*.png
-
-latex/
-
-videos/
-docs/02-solutions
 docs/wip
 docs/next.md
+docs/prompts.md
